make commands customizable